<resources>
    <string name="app_name">deloitte</string>
    <string name="news">News</string>
    <string name="sort"><u>Sort</u></string>
    <string name="filter_under_line"><u>Filter</u></string>
    <string name="filter">Filter</string>
    <string name="search">Search</string>
    <string name="info_select_data_to_filter_news">Select data to filter news</string>
    <string name="apply_filter">Apply Filter</string>
    <string name="details">Details</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="login">Login</string>
    <string name="registration">Registration</string>
    <string name="password">Password</string>
    <string name="first_name">First Name<font color="#EB3939">*</font></string>
    <string name="mobile_number">Mobile Number<font color="#EB3939">*</font></string>
    <string name="email">Email<font color="#EB3939">*</font></string>
    <string name="hint_password">Password<font color="#EB3939">*</font></string>
    <string name="my_birthday_is_on">When is your birthday?<font color="#EB3939">*</font></string>
    <string name="nationality">Nationality<font color="#EB3939">*</font></string>
    <string name="phone_number">Phone number<font color="#EB3939">*</font></string>
    <string name="error_first_name_required">Please enter your name</string>
    <string name="error_first_name_invalid">Please enter a name <br /> with no special characters</string>
    <string name="error_service_length_of_first_last_is_less_thank_two_characters">Please enter a name longer than 2 characters</string>
    <string name="error_email_required">Please enter your Email</string>
    <string name="error_invalide_email_format">Email is invalid</string>
    <string name="error_nationality_required">Please enter your Nationality</string>
    <string name="error_invalid_phone_number">Please enter valid phone number</string>
    <string name="error_required_phone_number">Please enter your phone number</string>
    <string name="error_gender_required">Please enter your gender</string>
    <string name="error_required_password">Password is required</string>
    <string name="error_password_eight_digits">Password should be 8 digits or more</string>
    <string name="error_complix_password">Password should include at least one number and special character Password should include both uppercase and lowercase letters</string>
    <string name="day">Day</string>
    <string name="week">Week</string>
    <string name="month">Month</string>
    <string name="year">Year</string>
    <string name="submit">Submit</string>
    <string name="dashboard">Dashboard</string>
    <string name="more">More</string>
    <string name="no_result">No Result</string>
    <string name="news_details">News Details</string>
    <string name="invalid_login">Invalid Login</string>
    <string name="error_email_already_exists">Email Already Exists</string>
    <string name="date_of_birth">Date of birth</string>
    <string name="language">عربي</string>
</resources>