<?xml version="1.0" encoding="utf-8"?>
<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/swipe_refresh"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <TextView
            android:id="@+id/no_result_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/no_result"
            android:textSize="@dimen/_20sdp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:visibility="visible" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_8sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_8sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_top"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintGuide_begin="@dimen/_8sdp" />

        <TextView
            android:id="@+id/news"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news"
            android:textColor="@color/black"
            android:textSize="@dimen/_16sdp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/gl_top" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/_8sdp"
            android:text="@string/sort"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:drawableStartCompat="@drawable/ic_sort"
            app:layout_constraintEnd_toStartOf="@+id/filter"
            app:layout_constraintTop_toBottomOf="@+id/gl_top" />

        <TextView
            android:id="@+id/filter"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/filter_under_line"
            android:textColor="@color/black"
            android:textStyle="bold"
            app:layout_constraintEnd_toStartOf="@id/gl_end"
            app:layout_constraintTop_toBottomOf="@+id/gl_top" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/search_input_layout"
            style="@style/FilledBoxInputLayout"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/search"
            app:endIconDrawable="@drawable/ic_search"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/news">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/search_etx"
                style="@style/SingleLineInputText"
                android:layout_marginTop="@dimen/_8sdp"
                android:inputType="textCapWords"
                android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/dashboard_recycler"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/search_input_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>