<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_8sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_8sdp" />

        <TextView
            android:id="@+id/change_language"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_4sdp"
            android:text="@string/language"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_layout"
            style="@style/FilledBoxInputLayout"
            android:layout_width="0dp"
            android:hint="@string/email"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_etx"
                style="@style/SingleLineInputText"
                android:inputType="textEmailAddress"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_layout"
            style="@style/FilledBoxInputLayout"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_22sdp"
            android:hint="@string/password"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/email_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_etx"
                style="@style/SingleLineInputText"
                android:layout_width="match_parent"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/usernameLayout" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/login"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/_22sdp"
            android:text="@string/login"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/password_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>