<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/white">

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_end"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_end="@dimen/_8sdp" />

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/gl_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_begin="@dimen/_8sdp" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/first_name_input_layout"
            style="@style/FilledBoxInputLayout"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_4sdp"
            android:hint="@string/first_name"
            app:endIconDrawable="@drawable/ic_pin"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="parent">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/first_name_etx"
                style="@style/SingleLineInputText"
                android:inputType="textCapWords"
                android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/email_input_layout"
            style="@style/FilledBoxInputLayout"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/email"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/first_name_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email_etx"
                style="@style/SingleLineInputText"
                android:inputType="textEmailAddress"
                android:maxLength="100" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/nationality_input_layout"
            style="@style/FilledBoxInputLayout"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/nationality"
            app:endIconDrawable="@drawable/ic_pin"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/email_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/nationality_etx"
                style="@style/SingleLineInputText"
                android:layout_height="match_parent"
                android:inputType="textCapSentences"
                android:maxLength="15" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/country_text"
            style="@style/SingleLineInputText"
            android:layout_width="wrap_content"
            android:drawableStart="@drawable/ic_jordan"
            android:drawablePadding="@dimen/_4sdp"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:paddingTop="0dp"
            android:paddingBottom="0dp"
            android:textDirection="ltr"
            app:layout_constraintBottom_toBottomOf="@+id/phone_number_input_layout"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toTopOf="@+id/phone_number_input_layout"
            android:text="+962" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_number_input_layout"
            style="@style/FilledBoxInputLayout"
            android:layout_width="0dp"
            android:layout_marginStart="@dimen/_4sdp"
            android:layout_marginTop="@dimen/_8sdp"
            android:layout_marginEnd="0dp"
            android:hint="@string/phone_number"
            app:boxStrokeColor="@color/black"
            app:layout_constraintEnd_toEndOf="@id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/country_text"
            app:layout_constraintTop_toBottomOf="@+id/nationality_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_number_etx"
                style="@style/SingleLineInputText"
                android:layout_margin="0dp"
                android:digits="1234567890"
                android:inputType="phone"
                android:maxLength="9" />
        </com.google.android.material.textfield.TextInputLayout>


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/date_of_birth_input_layout"
            style="@style/FilledBoxInputLayout"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/my_birthday_is_on"
            app:endIconDrawable="@drawable/ic_calendar"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/phone_number_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/date_of_birth_etx"
                style="@style/SingleLineInputText"
                android:focusable="false"
                android:focusableInTouchMode="false" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/password_input_layout"
            style="@style/FilledBoxInputLayout"
            android:layout_width="0dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:hint="@string/hint_password"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/date_of_birth_input_layout">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password_etx"
                style="@style/SingleLineInputText"
                android:inputType="textPassword"
                android:maxLength="20" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/registration"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginTop="@dimen/_8sdp"
            android:gravity="center"
            android:text="@string/registration"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/gl_end"
            app:layout_constraintStart_toEndOf="@+id/gl_start"
            app:layout_constraintTop_toBottomOf="@+id/password_input_layout" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>