<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_8sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_8sdp" />

    <ImageView
        android:id="@+id/image"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/full_name"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_4sdp"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/email"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@+id/image"
        tools:text="Rajai Marwan Mousa Abu Saqer" />

    <TextView
        android:id="@+id/email"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        app:layout_constraintBottom_toBottomOf="@id/image"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@+id/image"
        app:layout_constraintTop_toTopOf="@+id/image"
        tools:text="Rajaisaqer@gmail.com" />

    <TextView
        android:id="@+id/details"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/details"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/image" />

    <TextView
        android:id="@+id/information"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/details"
        tools:text="@string/details" />

    <TextView
        android:id="@+id/settings"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_12sdp"
        android:text="@string/settings"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/information" />

    <View
        android:id="@+id/line"
        android:layout_width="0dp"
        android:layout_height="1dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/grey"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/settings" />

    <TextView
        android:id="@+id/change_language"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/language"
        app:layout_constraintBottom_toBottomOf="@+id/logout"
        app:layout_constraintEnd_toStartOf="@id/gl_end"
        app:layout_constraintTop_toTopOf="@+id/logout" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/logout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/transparent"
        android:text="@string/logout"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:icon="@drawable/ic_logout"
        app:iconSize="20dp"
        app:iconTint="@color/black"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/line" />

</androidx.constraintlayout.widget.ConstraintLayout>