<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_end"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_end="@dimen/_8sdp" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/gl_start"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_begin="@dimen/_8sdp" />

    <TextView
        android:id="@+id/filter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/filter"
        android:textColor="@color/black"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="@+id/close"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toTopOf="@+id/close" />

    <ImageView
        android:id="@+id/close"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:src="@drawable/ic_close"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/info_select_data_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/info_select_data_to_filter_news"
        android:textStyle="bold"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/filter" />


    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/filter_input_layout"
        style="@style/FilledBoxInputLayout"
        android:layout_width="0dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:hint="@string/filter"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/info_select_data_text">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/filter_etx"
            style="@style/SingleLineInputText"
            android:layout_marginTop="@dimen/_8sdp"
            android:inputType="textCapWords"
            android:maxLength="15" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/apply_filter"
        android:layout_width="0dp"
        android:layout_height="60dp"
        android:layout_marginTop="@dimen/_8sdp"
        android:text="@string/apply_filter"
        app:layout_constraintEnd_toStartOf="@+id/gl_end"
        app:layout_constraintStart_toEndOf="@+id/gl_start"
        app:layout_constraintTop_toBottomOf="@+id/filter_input_layout" />
</androidx.constraintlayout.widget.ConstraintLayout>